tests/compile_fail/takes_mutably_owned_self.rs
use named::named;

struct S {}

impl S {
    #[named]
    fn always_true(mut self) -> bool {
        true
    }
}

fn main() {}
